@@ -28,20 +28,8 @@ faim_export unsigned long aim_usersearch_address(struct aim_session_t *sess,
 
   aim_tx_enqueue(sess, newpacket);
 
-  {
-    struct aim_snac_t snac;
-    
-    snac.id = sess->snac_nextid;
-    snac.family = 0x000a;
-    snac.type = 0x0002;
-    snac.flags = 0x0000;
+  aim_cachesnac(sess, 0x000a, 0x0002, 0x0000, address, strlen(address)+1);
 
-    snac.data = malloc(strlen(address)+1);
-    memcpy(snac.data, address, strlen(address)+1);
-
-    aim_newsnac(sess, &snac);
-  }
-
-  return (sess->snac_nextid++);
+  return sess->snac_nextid;
 }
 
